# Dundo

./: .gitignore  CREDITS.md  JOURNEY.md  PROJECT_OVERVIEW.md  README.md
backend/: .env.example  catalog.yaml  pyproject.toml
backend/backend/: api.py  artist.py  artist_response.py  config.py  context_token.py  corpus_dataset.py  corpus_io.py  evidence_tags.py  librosa_engine.py  mir_features.py  muq_engine.py  narrative_telemetry.py  rag_narrative.py  similarity.py  similarity_faiss.py
backend/backend/knowledge/: suno_coach.md
backend/backend/scripts/: _corpus_writer.py  bench_similarity.py  build_catalog_tags.py  build_phase2_catalog.py  enrich_mir_features.py  enrich_spike.py  mir_backfill.py  phase2_catalog.py  rebuild_corpus.py  run_eval.py  run_rag_eval.py  verify_matching.py
backend/eval_input/: golden_set_input.example.yaml  named_examples.example.yaml
backend/tests/: test_api.py  test_artist_contract.py  test_artist_response.py  test_build_catalog_tags.py  test_context_token.py  test_corpus_ingest.py  test_enrich_spike.py  test_evidence_tags.py  test_mir_backfill.py  test_mir_features.py  test_narrative_e2e.py  test_narrative_endpoint.py  test_narrative_telemetry.py  test_neighbors_endpoint.py  test_phase2_catalog.py  test_rag_eval.py  test_rag_narrative.py  test_signals_e2e.py  test_similarity_faiss.py  test_strict_schema.py
backend/tests/fixtures/: narrative_golden_set.json
deploy/: push_to_hf.sh  sync_to_hf.sh
deploy/hf_space/: Dockerfile  README.md  requirements.txt
docs/decisions/: 0004-multi-criterion-similarity.md  0005-rag-narrative-and-visual-match.md
quality-scorer/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json
quality-scorer/public/corpus/: corpus.json  manifest.json  rag_eval.json
quality-scorer/src/: index.css
quality-scorer/src/components/: ArtistCard.jsx  ArtistCard.test.jsx  ArtistResults.jsx  AudioPlayer.jsx  DropZone.jsx  Footer.jsx  Hero.jsx  Layout.jsx  NarrativeBlock.jsx  Nav.jsx  QualityBadge.jsx  (+5 more)
(+5 files in other folders)
