[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dundo-backend"
version = "0.1.0"
description = "Dundo — acoustic-similarity scanner for AI-generated music."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
runtime = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.9",
  "numpy>=1.26",
  "soundfile>=0.12",
  "librosa>=0.10",
  "transformers>=4.45",
  "torch>=2.4",
  "tqdm>=4.66",
  "datasets>=3.0",
  "faiss-cpu>=1.8",
  "huggingface_hub>=0.24",
  # ADR-0002: MuQ-MuLan audio encoder (Tencent AI Lab, 2025 SOTA on
  # MagnaTagATune zero-shot). Replaces LAION-CLAP as the primary similarity
  # backbone. CC-BY-NC 4.0 license — non-commercial use only.
  "muq>=0.1",
  # ADR-0005 (Commit C): GPT-4o-mini powers the /narrative explanatory
  # layer. Module is loaded lazily inside the endpoint so api.py still boots
  # when OPENAI_API_KEY is unset (endpoint then returns 503 narrative-disabled).
  "openai>=1.40",
  # LLM observability — Langfuse traces every /narrative call (prompt, response,
  # latency, cost) and supports dataset/LLM-as-judge evals. Opt-in: active only when
  # LANGFUSE_PUBLIC_KEY + LANGFUSE_SECRET_KEY are set; otherwise a plain OpenAI client.
  "langfuse>=3.0",
  # Pydantic v2 — already a transitive dep via fastapi, but pinned here
  # explicitly because /narrative + rag_narrative both rely on v2 features
  # (discriminated unions, model_dump).
  "pydantic>=2.0",
]
ingest = [
  "httpx>=0.27",
  "pyyaml>=6.0",
]
observability = [
  "sentry-sdk[fastapi]>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip slow tests by default; opt in with `pytest -m slow` or `pytest -m ""`.
addopts = "-q -m 'not slow'"
markers = [
  "slow: tests that load large ML models or hit the network",
]
